# rust-htmx

./: Cargo.toml  README.md
src/: main.rs
src/static/: index.html
