[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
femme = "2.2.1"
handlebars = "4.4.0"
kv-log-macro = "1.0.7"
poem = { version = "1.3.58", features = ["static-files"] }
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
