[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.5.1"
femme = "2.2.1"
handlebars = "4.4.0"
kv-log-macro = "1.0.7"
poem = { version = "1.3.58", features = ["static-files"] }
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
serde = "1.0.189"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
